# lp-mspm0c1104-playground

./: CMakeLists.txt  CMakePresets.json  readme.md
cmake/: arm-none-eabi-gcc.cmake
examples/: CMakeLists.txt
examples/assets/: linker-script.ld
examples/blinky/: CMakeLists.txt  cfg.c  cfg.h  hal-cfg.c  hal-cfg.h  main.c
examples/led-toggle-push-button/: CMakeLists.txt  cfg.c  cfg.h  main.c  readme.md
mspm0c1104/: CMakeLists.txt
mspm0c1104/include/mspm0c1104/: compiler.h  hal-cfg.h  hal-clk.h  hal-compiler.h  hal-gpio.h  hal-iomux.h  hal-irq.h  hal-nvic.h  hal-soft-tim.h  hal-soft-tmr.h  hal-systick.h  hal-tim.h  hal-types.h  hal-util.h  hal.h  util.h
mspm0c1104/src/: CMakeLists.txt  hal-gpio.c  hal-iomux.c  hal-soft-tim.c  hal-soft-tmr.c  hal-startup.c  hal-systick.c  hal-tim.c  hal.c
